# GenAI-Basics

./: 02. Connect to OPENAI_temp.py  03. Function.ipynb  05. Basics of Pydantics.ipynb  1. Connect to OPENAI.py  10. LangChain_react_Chat Multiple tools.ipynb  10a. LangGraph_react_Chat Multiple tools.ipynb  10b. LangGraph_react_Chat Multiple tools.ipynb  10c. LangGraph_OpenAI_Chat Multiple tools.ipynb  11a.MCP(LLM select tool and provide arguments) - Copy.ipynb  11b.MCP(Tool Call) - Copy.ipynb  11c.MCP(Displaying output).ipynb  12. Adding In Memory in LangGraph.ipynb  13. Streaming in LangGraph.ipynb  14. Human Feed in loop.ipynb  2. Connect to OPENAI Stream.py  3. Function.ipynb  4. Function advanced usecase.ipynb  5. Basics of Pydantics.ipynb  6. Pydantic with exception handling and nested models.ipynb  7. Pydantic with optional fields.ipynb  8. Pydantic with Customizations and Constraints.ipynb  9. LangGraph Basics.ipynb  Final Sample Project .ipynb  Requirements.txt  Sample Project SQL Queries.txt
11d. MCP Program/: Client.py  Get Longitude lattitude.py  Get_weather_from_longitude_lattitude.py  Help using UV in cursor.txt  Mathserver.py  Requirements.txt  Weather.py  main.py  pyproject.toml
SQL DB - Gen AI Project/: HealthcareDB.db  Requirements.txt  Sample Project HIL and count validation and Multiturn.ipynb  Sample Project HIL and count validation.ipynb  Sample Project Human in loop.ipynb  Sample Project.ipynb
